# CanViT-PyTorch

./: .gitignore  LICENSE.md  README.md  pyproject.toml
canvit_pytorch/: __init__.py  correctness.py
canvit_pytorch/attention/: __init__.py  base.py  read.py  write.py
canvit_pytorch/backbone/: __init__.py  registry.py
canvit_pytorch/backbone/vit/: __init__.py
canvit_pytorch/coords/: __init__.py  impl.py
canvit_pytorch/model/: __init__.py
canvit_pytorch/model/base/: __init__.py  config.py  impl.py
canvit_pytorch/model/pretraining/: __init__.py  impl.py
canvit_pytorch/model/pretraining/hub/: __init__.py
canvit_pytorch/preprocess/: __init__.py
canvit_pytorch/rope/: __init__.py  impl.py
canvit_pytorch/standardizers/: __init__.py
canvit_pytorch/viewpoint/: __init__.py
canvit_pytorch/vpe/: __init__.py
demos/: basic.py
