[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["canvit_pytorch"]

[tool.hatch.build.targets.sdist]
exclude = ["*.pt", "*.pt.bak", "*.pth", "throwaway/", "test_data/"]

[project]
name = "canvit-pytorch"
version = "0.1.2"
description = "CanViT (Canvas Vision Transformer) -- PyTorch"
readme = "README.md"
license = "MIT"
authors = [{ name = "Yohaï-Eliel Berreby", email = "me@yberreby.com" }]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.3.2",
    "numpy>=2.2.0,<2.4.0",
    "torch>=2.9.1",
    "torchvision>=0.22.1",
    "safetensors>=0.7.0",
]

[project.optional-dependencies]
demo = [
    "scikit-learn>=1.7.0",
    "dinov3-in1k-probes",
    "matplotlib>=3.10.8",
    "timm>=1.0.0",
    "tyro>=1.0.3",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.1",
    "ipython>=9.8.0",
    "pypatree>=0.4.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.uv.sources]
dinov3-in1k-probes = { git = "https://github.com/yberreby/dinov3-in1k-probes.git" }

[tool.pytest.ini_options]
testpaths = ["canvit_pytorch", "tests"]
python_files = ["test.py", "test_*.py"]
markers = ["slow: marks tests as slow (deselect with '-m not slow')"]
addopts = "-m 'not slow'"

[tool.ruff]
exclude = ["throwaway"]

[tool.basedpyright]
typeCheckingMode = "standard"
# exclude = ["throwaway"]  # BUG: causes basedpyright to hang indefinitely
